<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.aspix</groupId>
	<artifactId>archiver</artifactId>
	<packaging>jar</packaging>
	<version>5.99.1</version>
	<name>archiver</name>
	<url>http://www.anarchive.it</url>

	<properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <progetto.jars>${project.build.directory}/lib</progetto.jars>
    </properties>

	<dependencies>
    <dependency> 
      <groupId>it.aspix</groupId>
      <artifactId>simpleBotanicalData</artifactId>
      <version>[6.1,)</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-jexl</artifactId>
      <version>2.1.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>4.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.odftoolkit</groupId>
      <artifactId>odfdom-java</artifactId>
      <version>1.0.0-BETA1</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <!-- serve per evitare che "import javax.xml.parsers.SAXParser" provochi l'errore: -->
          <!-- The package javax.xml.parsers is accessible from more than one module: <unnamed>, java.xml -->
          <!-- sebbene funzioni il comando  mvn dependency:tree continua a mostrare la dipendenza -->
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions> 
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.12.2</version>
      <scope>test</scope>
    </dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<outputDirectory>${progetto.jars}</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
